--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,22 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlinVersion"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //        compile 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
+    compile 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
+//        compile 'com.github.kittinunf.fuel:fuel-livedata:<latest-version>' //for LiveData support
+//        compile 'com.github.kittinunf.fuel:fuel-rxjava:<latest-version>' //for RxJava support
+    compile 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
+    compile 'com.github.kittinunf.fuel:fuel-jackson:1.12.1' //for Jackson support
+//        compile 'com.github.kittinunf.fuel:fuel-moshi:<latest-version>' //for Moshi support
 }
