--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.21'
+    ext {
+        publishVersion = '1.12.1'
+
+        //dependencies version
+        kotlinVersion = '1.2.21'
+        resultVersion = '1.3.0'
+        rxjavaVersion = '2.1.8'
+        archLifecycleVersion = "1.0.0"
+
+        //android dependencies version
+        fuelCompileSdkVersion = 26
+        fuelBuildToolVersion = '26.0.2'
+        androidSupportVersion = '26.1.0'
+
+        //test dependencies version
+        junitVersion = '4.12'
+        robolectricVersion = '3.4.2'
+        gsonVersion = '2.8.2'
+        jacksonVersion = '2.9.3'
+        moshiVersion = '1.5.0'
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha08'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.novoda:bintray-release:0.7.0'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
